# reflect

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
cmake/: ReflectSupport.cmake  reflectConfig.cmake.in
ext/amazing_std/: CMakeLists.txt
ext/amazing_std/include/astd/: astd.h
ext/amazing_std/include/astd/algorithm/: sort.h
ext/amazing_std/include/astd/base/: define.h  except.h  logger.h  macro.h  trait.h  trait.inl  util.h
ext/amazing_std/include/astd/container/: list.h  map.h  queue.h  ring.h  set.h  string.h  vector.h
ext/amazing_std/include/astd/container/internal/: hash.h  tree.h
ext/amazing_std/include/astd/memory/: allocator.h  pointer.h
ext/amazing_std/src/: allocator.cpp
ext/amazing_std/test/: main.cpp
include/: clang_plugin.h  object.h  reflect.h
include/refl/: refl.h  relf.h
include/refl/internal/: any.h  ref.h  type.h
include/traits/: func.h  trait.h  type.h
include/utils/: hash.h  macro.h  pool.h
include/utils/containers/: queue.h  vector.h
src/: main.cpp  parse.cpp
src/refl/plugin/: refl_action.cpp  refl_action.h  refl_attr.cpp  refl_attr.h
